--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
    
     <title>Math APP</title>
 </head>         
-<body style="background-color: #000000f1;">
+<body style="background-color:  black;">
     
 
     <nav style="background: transparent; box-shadow: none;" class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a style="color: white;" class="navbar-brand" href="#">PORTFOIO</a>
+          <a id="logoo" style="color: white;" class="navbar-brand" href="#">Math's Coaching</a>
           <button style="color: white;"
             class="navbar-toggler"
             type="button"
@@ -27,35 +27,47 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <i class="fas fa-bars"></i>
+            <i id="kooui" class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a id="navlink" class="nav-link active" href="#">HOME</a>
+                <a  id="navlink1" class="nav-link active" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a id="navlink" class="nav-link active" href="#">ABOUT</a>
+                <a id="navlink2" class="nav-link active" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a id="navlink" class="nav-link active" href="#">PORTFOLIO</a>
+                <a id="navlink3" class="nav-link active" href="#">Contact Us</a>
               </li>
-              <li class="nav-item">
-                <a id="navlink" class="nav-link active" href="#">LOGIN / SIGNUP</a>
-              </li>
-              
+                <li id="kj" class="nav-item">
+                  <button style="padding-left: 25px;padding-right: 25px;" id="togle" class="navbtn"><i class="fa-solid fa-moon"></i></button>
+                </li>
+                <li class="nav-item">
+                  <button  id="navbhji" class="navbtn1">Login</button>
+                </li>
             </ul>
           </div>
         </div>
       </nav>
       <!-- navbar -->
 <div class="container">
-    <div class="home-page">
+    <div id="home" class="home-page">
         <div class="left">
             <div class="text">
-<h1>Learn With Us .</h1>
-<h2>All Question <br>Will Be Solve Here .</h2>
-            </div>
+   
+    <h1 id="ex1" style="  font-weight: 700; margin-left: 150px;margin-right: 150px;">Learn With Us .</h1><br>
+<h2 id="ex2" ><span style="width: 150px;  font-weight: 700; margin-left: 440px; padding: 1%;  text-align: center; font-weight: 00;">All Question </span><br><span style="padding: 1.5%; margin-left: 10px; font-weight: 700;">Will Be Solve Here .</span></h2><br>
+<h3 id="ex3"  style="width: 200px; margin-left: 440px; padding: 1% 1% 1% 0%;  text-align: center; font-weight: 700;">With Teaching</h3>
+<h4 id="ex4"  style=" margin-left: 10px; font-weight: 700; width: 200px;text-align: center;">We Have Best <br> <span>
+    Teacher . 
+</span> 
+</h4> 
+<div class="btn-all">
+<button  id="btnContact">Contact Us</button>
+
+</div>
+</div>
         </div>
         <div class="right">
 <div class="img">
